
  CHANGELOG FOR ISTAT
 -------------------------------------------------------------------------
  * Version: 0.5.1
  * 
 -------------------------------------------------------------------------
  * Version: 0.5.0
  * New: First release